@@ -2,8 +2,8 @@
     {
         "imageId": "evacuation-1",
         "text": "Evacuation! The greatest affair in human history! \n As Obliterator moved closer to Solar system, Earth governments executed a top-secret plan of evacuation as much as possible from an upcoming destruction.
-\n For first few years everything went quite well. Operation was officially stated as 'Establishment of a first colony in another star system', huge colony ships with thousands of people and all necessary equipment started their way.\n
-It was a time of great enthusiasm in Earth society, all nations praised the brave space explorers, not knowing that they are looking on their last chance to survive moving away..."
+\n For first few years everything went quite well. Operation was officially stated as 'Establishment of a first colony in another star system', huge colony ships with thousands of people and all necessary equipment started their way. \n
+It was a time of great enthusiasm in Earth society, all nations praised the brave space explorers, not knowing that they are looking how their last chance to survive is moving away..."
     },
     {
         "imageId" : "evacuation-1",
