@@ -7,6 +7,8 @@
 package ru.game.aurora.player.earth;
 
 
+import ru.game.aurora.dialog.DialogListener;
+import ru.game.aurora.gui.StoryScreen;
 import ru.game.aurora.world.World;
 import ru.game.aurora.world.planet.BasePlanet;
 import ru.game.aurora.world.planet.Planet;
@@ -25,6 +27,10 @@ import java.util.List;
  * State of humanity evacuation from Earth
  */
 public class EvacuationState implements Serializable {
+
+    // Obliterator will visit earth in 10 years after game start
+    private static final int OBLITERATOR_TURNS = 365 * 10;
+
     private static final long serialVersionUID = -5249504974370213017L;
 
     private final int turnObliteratorArrives;
@@ -35,8 +41,8 @@ public class EvacuationState implements Serializable {
 
     private StarSystem targetSystem;
 
-    public EvacuationState(World world, int turnObliteratorArrives) {
-        this.turnObliteratorArrives = turnObliteratorArrives;
+    public EvacuationState(World world) {
+        this.turnObliteratorArrives = world.getTurnCount() + OBLITERATOR_TURNS;
         findSuitableStarSystem(world.getGalaxyMap(), world.getRaces().get("Humanity").getHomeworld());
     }
 
@@ -64,8 +70,25 @@ public class EvacuationState implements Serializable {
         return targetSystem;
     }
 
-    private boolean isGameOver(World world) {
+    public boolean isGameOver(World world) {
         return world.getTurnCount() >= turnObliteratorArrives;
+    }
+
+    public void showEndGameScreen(World world)
+    {
+        //todo: depending on progress show different endings
+        StoryScreen ss = new StoryScreen("story/evacuation_ending_bad.json");
+        ss.setListener(new DialogListener() {
+
+            private static final long serialVersionUID = 2069156686330555730L;
+
+            @Override
+            public void onDialogEnded(World world, int returnCode) {
+                world.setGameOver(true);
+            }
+        });
+
+        world.addOverlayWindow(ss);
     }
 
     /**
