@@ -3,6 +3,7 @@ package ru.game.aurora.world.generation.quest;
 import org.newdawn.slick.Color;
 import ru.game.aurora.application.CommonRandom;
 import ru.game.aurora.dialog.Dialog;
+import ru.game.aurora.player.earth.EvacuationState;
 import ru.game.aurora.player.earth.PrivateMessage;
 import ru.game.aurora.world.GameEventListener;
 import ru.game.aurora.world.World;
@@ -113,6 +114,8 @@ public class MainQuestGenerator implements WorldGeneratorPart {
         }
 
         world.addListener(new MainQuestSystemEnterListener());
+
+        world.getPlayer().getEarthState().setEvacuationState(new EvacuationState(world));
     }
 
     public static StarSystem createStarSystem(int x, int y) {
